# homepage

./: .gitignore  README.md  example.yaml  homepage.js  homepage.py  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  style.css  style.scss  temp.html  test_homepage.py
docs/: call_diagram.dot
stylesheets/: base.css  default.css  fata.css  lcars.css
templates/: card.html  index.html  link_group.html  menu.html  page_switcher.html  render_contents.html  search.html  try_layout.html  utility.html
