[tool.poetry]
name = "homepage"
version = "0.1.0"
description = "Project to generate static homepage[s] from yaml file."
authors = ["John Cassidy <jocassid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
